--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>bupt.gn</groupId>
   <artifactId>innovation</artifactId>
   <packaging>war</packaging>
-  <version>0.0.1</version>
+  <version>0.0.1-SNAPSHOT</version>
   <name>innovation Maven Webapp</name>
   <url>http://maven.apache.org</url>
  <properties>
@@ -12,8 +12,6 @@
         <spring.version>3.2.4.RELEASE</spring.version>
         <!-- mybatis版本号 -->
         <mybatis.version>3.2.4</mybatis.version>
-        <!-- struts 版本号-->
-        <struts.version>2.3.16.3</struts.version>
         <!-- log4j日志文件管理包版本 -->
         <slf4j.version>1.7.2</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
@@ -76,18 +74,6 @@
             <version>${spring.version}</version>
         </dependency>
         <!-- springframe end -->
-        <!-- struts -->
-        <dependency>  
-            <groupId>org.apache.struts</groupId>  
-            <artifactId>struts2-core</artifactId>  
-            <version>${struts.version}</version>  
-        </dependency> 
-
-         <dependency>  
-            <groupId>org.apache.struts</groupId>  
-            <artifactId>struts2-spring-plugin</artifactId>  
-            <version>${struts.version}</version>  
-        </dependency>  
  
         <!-- mybatis核心包 -->
         <dependency>
@@ -149,13 +135,6 @@
             <artifactId>log4j</artifactId>
             <version>${log4j.version}</version>
         </dependency>
-        
-        <dependency>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-            <version>1.2</version>
-        </dependency>
-
         <!-- <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
