--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,11 +4,6 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
-
-
-  	<listener>
-	    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
      <!-- 读取spring配置文件 -->
 	<context-param>
 	    <param-name>contextConfigLocation</param-name>
@@ -21,21 +16,7 @@
 	    <param-name>webAppRootKey</param-name>
 	    <param-value>innovation.root</param-value>
 	</context-param>
-	
-	<!-- 配置struts2 -->  
-    <filter>  
-        <filter-name>struts2</filter-name>  
-        <filter-class>  
-            org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>  
-        <!-- <init-param>   
-   			<param-name>config</param-name>   
-   			<param-value>classpath:conf/struts.xml</param-value>   
-		</init-param>  -->
-    </filter>  
-    <filter-mapping>  
-        <filter-name>struts2</filter-name>  
-        <url-pattern>/*</url-pattern>  
-    </filter-mapping>  
+
 
 	<!-- Spring字符集过滤器 -->
 	<filter>
@@ -70,8 +51,12 @@
 	    <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
 	</listener>
 
-	 <!-- springMVC核心配置 -->
-	<!--<servlet>
+	<listener>
+	    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+
+	<!-- springMVC核心配置 -->
+	<servlet>
 	    <servlet-name>spring</servlet-name>
 	    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 	    <init-param>
@@ -83,7 +68,7 @@
 	<servlet-mapping>
 	    <servlet-name>spring</servlet-name>
 	    <url-pattern>*.do</url-pattern>
-	</servlet-mapping> -->
+	</servlet-mapping>
 
 	<welcome-file-list>
 	    <welcome-file>index.html</welcome-file>
