--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,7 @@
-<!DOCTYPE web-app PUBLIC
+<!--<!DOCTYPE web-app PUBLIC
  "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
+-->
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
      <!-- 读取spring配置文件 -->
@@ -54,9 +54,20 @@
 	<listener>
 	    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-
-	<!-- springMVC核心配置 -->
-	<servlet>
+	
+	<!-- struts核心拦截器 -->
+	<filter>
+		<filter-name>struts2</filter-name>
+		<filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>struts2</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+    <!-- springMVC核心配置 ,前端控制器-->
+	 <servlet>
 	    <servlet-name>spring</servlet-name>
 	    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 	    <init-param>
@@ -68,7 +79,7 @@
 	<servlet-mapping>
 	    <servlet-name>spring</servlet-name>
 	    <url-pattern>*.do</url-pattern>
-	</servlet-mapping>
+	</servlet-mapping>  
 
 	<welcome-file-list>
 	    <welcome-file>index.html</welcome-file>
