--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,11 +4,6 @@
 -->
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
-
-
-  	<listener>
-	    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
      <!-- 读取spring配置文件 -->
 	<context-param>
 	    <param-name>contextConfigLocation</param-name>
@@ -20,7 +15,8 @@
 	<context-param>
 	    <param-name>webAppRootKey</param-name>
 	    <param-value>innovation.root</param-value>
-	</context-param> 
+	</context-param>
+
 
 	<!-- Spring字符集过滤器 -->
 	<filter>
@@ -55,7 +51,6 @@
 	    <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
 	</listener>
 
-
 	<listener>
 	    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
@@ -71,9 +66,8 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	
-    
-	<servlet>
-
+    <!-- springMVC核心配置 ,前端控制器-->
+	 <servlet>
 	    <servlet-name>spring</servlet-name>
 	    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 	    <init-param>
@@ -85,10 +79,7 @@
 	<servlet-mapping>
 	    <servlet-name>spring</servlet-name>
 	    <url-pattern>*.do</url-pattern>
-
 	</servlet-mapping>  
-
-
 
 	<welcome-file-list>
 	    <welcome-file>index.html</welcome-file>
