json result type added

--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
             <artifactId>struts2-spring-plugin</artifactId>  
             <version>${struts.version}</version>  
         </dependency>  
+        <dependency>  
+            <groupId>org.apache.struts</groupId>  
+            <artifactId>struts2-json-plugin</artifactId>  
+            <version>${struts.version}</version>  
+        </dependency> 
+ 
  
         <!-- mybatis核心包 -->
         <dependency>
@@ -121,7 +127,7 @@
             <version>1.0.2</version>
         </dependency>
  
-        <!-- json数据 -->
+        <!--  json数据 
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
@@ -131,15 +137,14 @@
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-core-asl</artifactId>
             <version>1.9.13</version>
-        </dependency>
+        </dependency>-->
 
-        <!--json-lib-->  
         <dependency>  
             <groupId>net.sf.json-lib</groupId>  
             <artifactId>json-lib</artifactId>  
             <version>2.4</version>  
             <classifier>jdk15</classifier>  
-        </dependency>
+        </dependency> 
 
  
         <!-- 日志文件管理包 -->
