--- a/src/main/resources/conf/jdbc.properties
+++ b/src/main/resources/conf/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc_driverClassName=com.mysql.jdbc.Driver
 jdbc_url=jdbc:mysql://localhost:3306/innovation?useUnicode=true&amp;characterEncoding=utf-8
-jdbc_username=innovation
-jdbc_password=123456
+jdbc_username=byzsj2014
+jdbc_password=byzsj2014
